# poker-rust

./: # VSCode cheat sheet.md  .gitignore  Cargo.toml  Dockerfile  Justfile  docker-compose.yml
migration/: ER.md
migration/src/: lib.rs  m20250802_031125_create_games.rs  m20250802_034639_decks.rs  m20250802_044138_create_players.rs  m20250802_044439_create_game_players.rs
openapis/: api.yml  redoc-static.html  v1_decks_draw.yml  v1_games.yml  v1_hands_exchange.yml  v1_hands_judge.yml  v1_player.yml
openapis/model/: Card.yml  Game.yml  GamePlayer.yml  Player.yml
openapis/schema/: GetGameResponseBody.yml  PostCreateGameRequestBody.yml  PostCreateGameResponseBody.yml  PostCreatePlayerRequestBody.yml  PostCreatePlayerResponseBody.yml  PostDrawCardsRequestBody.yml  PostDrawCardsResponseBody.yml  PostExchangeHandsRequestBody.yml
src/: handler.rs  main.rs  repository.rs
src/domain/: models.rs  services.rs
src/domain/models/: card.rs  deck.rs  game.rs  player.rs
src/domain/services/: README.md  game_service.rs  game_service_impl.rs  player_service.rs  player_service_impl.rs
src/error/: error.rs
src/handler/: README.md  card.rs  draw.rs  draw_handler.rs  error.rs  game.rs  game_handler.rs  game_player.rs  game_player_handler.rs  health.rs  player.rs  player_handler.rs
src/infrastructure/: repository.rs
src/infrastructure/db/: README.md
src/infrastructure/repository/: deck_repository_impl.rs  game_player_repository_impl.rs  (+2 more)
src/repository/: deck_repository.rs  error.rs  game_player_repository.rs  game_repository.rs  player_repository.rs
(+7 files in other folders)
